--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           >
           <ul class="header-menu">
             <li class="header-list">
-              <a class="header-link" href="./index.html">Studio</a>
+              <a class="header-link current" href="./index.html">Studio</a>
             </li>
             <li class="header-list">
               <a class="header-link" href="">Portfolio</a>
