--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             >Web<span class="logo-color">Studio</span></a
           >
           <ul class="header-menu">
-            <li class="header-list">
+            <li class="header-list first-header-list">
               <a class="header-link current" href="./index.html">Studio</a>
             </li>
             <li class="header-list">
