--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
             >Web<span class="logo-color">Studio</span></a
           >
           <ul class="header-menu">
-            <li class="header-list first-header-list">
-              <a class="header-link current" href="./index.html">Studio</a>
+            <li class="header-list">
+              <a class="header-link current first-link" href="./index.html"
+                >Studio</a
+              >
             </li>
             <li class="header-list">
               <a class="header-link" href="">Portfolio</a>
